# app-symbol

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ledger_app.toml
.github/workflows/: build_and_functional_tests.yml  ci-workflow.yml  codeql_checks.yml  coding_style_checks.yml  guidelines_enforcer.yml  misspellings_checks.yml  python_client_checks.yml  unit_tests.yml
doc/: transactions_schema.md
src/: app_buffer.c  app_buffer.h  base32.c  base32.h  buffer.c  common.h  crypto.c  crypto.h  io.c  io.h  limitations.h  main.c  types.h
src/apdu/: constants.h  entry.c  entry.h  global.c  global.h  parser.h
src/apdu/messages/: get_app_configuration.c  get_app_configuration.h  get_public_key.c  get_public_key.h  sign_transaction.c  sign_transaction.h
src/transaction/: transaction.c  transaction.h
src/ui/: bagl_utils.h  display.h
src/ui/address/: address_ui.c  address_ui.h
src/ui/main/: idle_menu.c  idle_menu.h
src/ui/other/: loading.c  loading.h
src/ui/transaction/: review_menu.c  review_menu.h
src/xym/: xym_helpers.c  xym_helpers.h
src/xym/format/: app_format.c  fields.c  fields.h  format.c  format.h  printers.c  printers.h  readers.h
src/xym/parse/: xym_parse.c  xym_parse.h
tests/corpus/: account_address_restriction.json  account_metadata_transaction.json  account_mosaic_restriction.json  account_multisig.json  account_operation_restriction.json  cosignature_transaction.json  create_mosaic.json  create_namespace.json  create_sub_namespace.json  delegated_harvesting.json  hash_lock_account_multisig.json  hash_lock_multisig_create_namespace.json  link_namespace_to_address.json  link_namespace_to_mosaic.json  mosaic_metadata_transaction.json  multisig_create_mosaic.json  multisig_create_namespace.json  multisig_create_sub_namespace.json  multisig_transfer_transaction.json  namespace_metadata_transaction.json  persistent_harvesting_delegation_transfer.json  supply_change_mosaic.json  transfer_transaction.json  transfer_transaction_not_xym.json
tests/functional/: test_pubkey_cmd.py  test_sign_cmd.py  test_symbol_transaction_builder_parser.py  test_version_cmd.py
tests/functional/apps/: symbol.py  symbol_transaction_builder.py  symbol_transaction_parser.py
tests/tools/: getPublicKey.py  getVersion.py  signTx.py
tests/unit/: CMakeLists.txt  README.md  mock.c  test_transaction_parser.c  test_transaction_parser.py
tests/unit-tests/: CMakeLists.txt  fuzz_xym.c  test_bip32_path_extraction.c
